# mcp-pinecone

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SSE_README.md  _config.yml  example_usage.py  my_test.py  pyproject.toml  requirements.txt  smithery.yaml  sse_client_example.py  start_sse_server.py  test_openai_embedding.py  test_query_only.py  test_sse.py
src/mcp_pinecone/: __init__.py  chunking.py  constants.py  pinecone.py  prompts.py  server.py  server_sse.py  tools.py  utils.py
